# lib/db/src/schema/tenants.ts
@@ -28,6 +28,8 @@ export const tenantsTable = pgTable("tenants", {
   enableQris: boolean("enable_qris").notNull().default(true),
   enableBankTransfer: boolean("enable_bank_transfer").notNull().default(false),
   enableEwallet: boolean("enable_ewallet").notNull().default(false),
+  showVariants: boolean("show_variants").notNull().default(true),
+  showToppings: boolean("show_toppings").notNull().default(true),
   createdAt: timestamp("created_at", { withTimezone: true }).notNull().defaultNow(),
   updatedAt: timestamp("updated_at", { withTimezone: true }).notNull().defaultNow().$onUpdate(() => new Date()),
 });
